--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>The Dosa Junction || Dosa, Idli, Sandwich and more...</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../home/home.css">
-    <link rel="stylesheet" href="../home/home1.css">
+    <link rel="stylesheet" href="home/home.css">
+    <link rel="stylesheet" href="home/home1.css">
 </head>
 
 <body>
