--- a/menu/menu.html
+++ b/menu/menu.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about/about.html">About</a>
+                        <a class="nav-link" href="../about/about.html">About</a>
                     </li>
                     <div class="btn-group">
-                        <a href="/menu/menu.html" class="btn nav-link act">Menu</a>
+                        <a href="../menu/menu.html" class="btn nav-link act">Menu</a>
                         <div role="button" class="my-auto dropdown-toggle dropdown-toggle-split"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <span class="visually-hidden">Toggle Dropdown</span>
@@ -41,10 +41,10 @@
                         </ul>
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gallery/gallery.html">Gallery</a>
+                        <a class="nav-link" href="../gallery/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact/contact.html">Contact Us</a>
+                        <a class="nav-link" href="../contact/contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
