--- a/menu/menu.html
+++ b/menu/menu.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid mx-5 px-5">
-            <a class="navbar-brand" href="#"><img src="/assets/logoc.png" alt="" height="80" width="80"></a>
+            <a class="navbar-brand" href="#"><img src="../assets/logoc.png" alt="" height="80" width="80"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -235,7 +235,7 @@
                                 <div class="col mb-3 mx-4">
                                     <h5>Quick Links</h5>
                                     <ul class="nav flex-column">
-                                        <li class="nav-item mb-2"><a href="/menu/menu.html"
+                                        <li class="nav-item mb-2"><a href="../menu/menu.html"
                                                 class="nav-link p-0 quick_link">Menu
                                                 Card<svg stroke="currentColor" fill="none" stroke-width="0"
                                                     viewBox="0 0 24 24" class="color_golden fs-4 ms-2 footer_arrow"
@@ -244,7 +244,7 @@
                                                         d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
                                                         fill="currentColor"></path>
                                                 </svg></a></li>
-                                        <li class="nav-item mb-2"><a href="/about/about.html"
+                                        <li class="nav-item mb-2"><a href="../about/about.html"
                                                 class="nav-link p-0 quick_link">About
                                                 Us<svg stroke="currentColor" fill="none" stroke-width="0"
                                                     viewBox="0 0 24 24" class="color_golden fs-4 ms-2 footer_arrow"
@@ -253,7 +253,7 @@
                                                         d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
                                                         fill="currentColor"></path>
                                                 </svg></a></li>
-                                        <li class="nav-item mb-2"><a href="/contact/contact.html"
+                                        <li class="nav-item mb-2"><a href="../contact/contact.html"
                                                 class="nav-link p-0 quick_link">Visit<svg stroke="currentColor"
                                                     fill="none" stroke-width="0" viewBox="0 0 24 24"
                                                     class="color_golden fs-4 ms-2 footer_arrow" height="1em" width="1em"
