--- a/menu/menu.html
+++ b/menu/menu.html
@@ -34,10 +34,10 @@
                             <span class="visually-hidden">Toggle Dropdown</span>
                         </div>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/menu/menu.html">Mumbai Dosa</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Uttapam</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Sandwich</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Extras</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Mumbai Dosa</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Uttapam</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Sandwich</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Extras</a></li>
                         </ul>
                     </div>
                     <li class="nav-item">
@@ -73,7 +73,7 @@
                     <div class="col-md-4 order-md-2 d-flex">
                         <div class="special d-flex flex-column align-items-center">
                             <div class="spcl-top">
-                                <img src="/assets/logoc.png" alt="" height="80" width="80">
+                                <img src="../assets/logoc.png" alt="" height="80" width="80">
                                 <div>
                                     <h1>The Dosa Junction</h1>
                                     <p>Cafe & Restaurant</p>
@@ -116,10 +116,10 @@
                                 <h1>AT JUST RS 120/-</h1>
                                 <P>T.D.J SPECIAL DOSA</P>
                             </div>
-                            <img src="/assets/11dosa.png" alt="">
+                            <img src="../assets/11dosa.png" alt="">
                             <div class="floating">
-                                <img src="/assets/tomato.png" alt="" class="cursor-image">
-                                <img src="/assets/tomato.png" alt="" class="cursor-image">
+                                <img src="../assets/tomato.png" alt="" class="cursor-image">
+                                <img src="../assets/tomato.png" alt="" class="cursor-image">
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                     <div class="col d-flex flex-column position-static col-md-8">
                         <div class="cont-div">
                             <div class="top mt-5">
-                                <img src="/assets/logoc.png" class="mx-3" alt="" height="80" width="80">
+                                <img src="../assets/logoc.png" class="mx-3" alt="" height="80" width="80">
                                 <div>
                                     <h1>Visit us today and embark on a journey of taste at The Dosa Junction</h1>
                                     <p>- Where Every Bite Tells a Story!</p>
