--- a/about/about.html
+++ b/about/about.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid mx-5 px-5">
-            <a class="navbar-brand" href="#"><img src="/assets/logoc.png" alt="" height="80" width="80"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/logoc.png" alt="" height="80" width="80"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,29 +22,29 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link act" href="/about/about.html">About</a>
+                        <a class="nav-link act" href="../about/about.html">About</a>
                     </li>
                     <div class="btn-group">
-                        <a href="/menu/menu.html" class="btn nav-link">Menu</a>
+                        <a href="../menu/menu.html" class="btn nav-link">Menu</a>
                         <div role="button" class="my-auto dropdown-toggle dropdown-toggle-split"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <span class="visually-hidden">Toggle Dropdown</span>
                         </div>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/menu/menu.html">Mumbai Dosa</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Uttapam</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Sandwich</a></li>
-                            <li><a class="dropdown-item" href="/menu/menu.html">Extras</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Mumbai Dosa</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Uttapam</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Sandwich</a></li>
+                            <li><a class="dropdown-item" href="../menu/menu.html">Extras</a></li>
                         </ul>
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gallery/gallery.html">Gallery</a>
+                        <a class="nav-link" href="../gallery/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact/contact.html">Contact Us</a>
+                        <a class="nav-link" href="../contact/contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -188,7 +188,7 @@
                     <div class="col d-flex flex-column position-static col-md-8">
                         <div class="cont-div">
                             <div class="top mt-5">
-                                <img src="/assets/logoc.png" class="mx-3" alt="" height="80" width="80">
+                                <img src="../assets/logoc.png" class="mx-3" alt="" height="80" width="80">
                                 <div>
                                     <h1>Visit us today and embark on a journey of taste at The Dosa Junction</h1>
                                     <p>- Where Every Bite Tells a Story!</p>
@@ -198,7 +198,7 @@
                                 <div class="col mb-3 mx-4">
                                     <h5>Quick Links</h5>
                                     <ul class="nav flex-column">
-                                        <li class="nav-item mb-2"><a href="/menu/menu.html"
+                                        <li class="nav-item mb-2"><a href="../menu/menu.html"
                                                 class="nav-link p-0 quick_link">Menu
                                                 Card<svg stroke="currentColor" fill="none" stroke-width="0"
                                                     viewBox="0 0 24 24" class="color_golden fs-4 ms-2 footer_arrow"
@@ -207,7 +207,7 @@
                                                         d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
                                                         fill="currentColor"></path>
                                                 </svg></a></li>
-                                        <li class="nav-item mb-2"><a href="/about/about.html"
+                                        <li class="nav-item mb-2"><a href="../about/about.html"
                                                 class="nav-link p-0 quick_link">About
                                                 Us<svg stroke="currentColor" fill="none" stroke-width="0"
                                                     viewBox="0 0 24 24" class="color_golden fs-4 ms-2 footer_arrow"
@@ -216,7 +216,7 @@
                                                         d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
                                                         fill="currentColor"></path>
                                                 </svg></a></li>
-                                        <li class="nav-item mb-2"><a href="/contact/contact.html"
+                                        <li class="nav-item mb-2"><a href="../contact/contact.html"
                                                 class="nav-link p-0 quick_link">Visit<svg stroke="currentColor"
                                                     fill="none" stroke-width="0" viewBox="0 0 24 24"
                                                     class="color_golden fs-4 ms-2 footer_arrow" height="1em" width="1em"
