--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid mx-5 px-5">
-            <a class="navbar-brand" href="#"><img src="assets/logoc.png" alt="" height="80" width="80"></a>
+            <a class="navbar-brand" href="../index.html"><img src="assets/logoc.png" alt="" height="80" width="80"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -306,7 +306,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="/home/home1.js"></script>
+    <script src="home/home1.js"></script>
 </body>
 
 </html>
