--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid mx-5 px-5">
-            <a class="navbar-brand" href="#"><img src="../assets/logoc.png" alt="" height="80" width="80"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/logoc.png" alt="" height="80" width="80"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
