--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -58,7 +58,7 @@
                     <h1 class="">Gallery</h1>
                     <div></div>
                 </div>
-                <img src="/assets/construction.png" class="my-3" alt="">
+                <img src="../assets/construction.png" class="my-3" alt="">
                 <p class="lead">
                     This Section is Under Construction
                 </p>
