--- a/about/about.html
+++ b/about/about.html
@@ -85,7 +85,7 @@
             <div class="abt-btm-mid container">
                 <div class="row align-items-center g-0 py-5">
                     <div class="col-xl-6">
-                        <div class="card border-0 rounded-0 scale_ch"><img class="w-100" src="/assets/bg8.jpg" alt="">
+                        <div class="card border-0 rounded-0 scale_ch"><img class="w-100" src="../assets/bg8.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-xl-6">
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <div class="card border-0 rounded-0 scale_ch z-n1"><img class="w-100" src="/assets/bg8.jpg"
+                        <div class="card border-0 rounded-0 scale_ch z-n1"><img class="w-100" src="../assets/bg8.jpg"
                                 alt="">
                         </div>
                     </div>
