updated portfolio link

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -309,8 +309,8 @@
                         </div>
                     </div>
                     <div class="bottom">
-                        <p>© 2024 <b>The Dosa Junction.</b> All rights reserved.</p>
-                        <p>Designed & Developed By <b>Anuj Prasad</b></p>
+                        <p>© 2024 <a href="">The Dosa Junction.</a> All rights reserved.</p>
+                        <p>Designed & Developed By <a href="https://anujprasad0.github.io/Portfolio/" target="_blank">Anuj Prasad</a></p>
                     </div>
                 </div>
             </div>
