--- a/about/about.html
+++ b/about/about.html
@@ -274,7 +274,7 @@
                     </div>
                     <div class="bottom">
                         <p>© 2024 <a href="">The Dosa Junction.</a> All rights reserved.</p>
-                        <p>Designed & Developed By <a href="https://anujprasad0.github.io/Portfolio/" target="_blank">Anuj Prasad</a></p>
+                        <p>Designed & Developed By <a href="https://my-portfolio-64sh.onrender.com/" target="_blank">Anuj Prasad</a></p>
                     </div>
                 </div>
             </div>
